--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.22",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
